# Sozluk

./: .gitignore  README.md  dev.omerkurt.Sozluk.json  meson.build
data/: dev.omerkurt.Sozluk.desktop.in  dev.omerkurt.Sozluk.gschema.xml  dev.omerkurt.Sozluk.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  sozluk.gresource.xml  sozluk.in  window.blp  window.py
subprojects/: blueprint-compiler.wrap
